--- a/index.html
+++ b/index.html
@@ -9,7 +9,10 @@
 <body>
 
   <h1><b> This Website is Currently Under Construction. Come Back Soon to See
-    What Happens Here. (plot twist, it's going to be awesome)
+    What Happens Here. (plot twist, it's going to be awesome) </b></h1>
+
+  <a href="https://medium.com/@MrCodySmith">In the mean time, check out my blog
+    over on Medium</a>
 
 </body>
 
