--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
 						</ul>
 					</li>
                     <li>
-                        <a href="#">Contact</a>
+                        <a href="http://mrcodysmith.com/contact">Contact</a>
                     </li>
                 </ul>
 
@@ -74,10 +74,10 @@
     <header>
         <div class="header-content">
             <div class="header-content-inner">
-                <h1>Information Security</h1>
-                <p>I act as the linchpin between management and our end users
-                to provide proactive security solutions.</p>
-                <a href="#" class="btn btn-primary btn-lg">Engage Now</a>
+                <h1>Mr. Cody Smith</h1>
+                <p>Acting as the linchpin between management and our end users
+                to provide proactive security solutions since 2014.</p>
+                <a href="http://mrcodysmith.com/contact" class="btn btn-primary btn-lg">Engage Now</a>
             </div>
         </div>
     </header>
@@ -87,9 +87,10 @@
         <div class="container">
             <div class="row">
                 <div class="col-lg-8 col-lg-offset-2">
-                	<span class="glyphicon glyphicon-apple" style="font-size: 60px"></span>
-                    <h2 class="section-heading">Completely synergize resource taxing relationships</h2>
-                    <p class="text-light">Professionally cultivate one-to-one customer service with robust ideas. Dynamically innovate resource-leveling customer service for state of the art customer service.</p>
+                	<span class="glyphicon glyphicon-lock" style="font-size: 60px"></span>
+                    <h2 class="section-heading">Proactive Security is a way of Business</h2>
+                    <p class="text-light">Information Security can be reactive, but I believe that the best
+                    security is proactive security.</p>
                 </div>
             </div>
         </div>
@@ -103,9 +104,9 @@
                     <img class="img-responsive img-circle center-block" src="images/microphone.jpg" alt="">
                 </div>
                 <div class="col-sm-6">
-                	<h2 class="section-header">Best in Class</h2>
-                	<p class="lead text-muted">Holisticly predominate extensible testing procedures for reliable supply chains. Dynamically innovate resource-leveling customer service for state of the art customer service.</p>
-                	<a href="#" class="btn btn-primary btn-lg">Classify It</a>
+                	<h2 class="section-header">Check out my Blog</h2>
+                	<p class="lead text-muted"> From time to time I like to publish things to my blog on Medium. Make sure to check out a couple of my most recent posts!</p>
+                	<a href="https://medium.com/@MrCodySmith" class="btn btn-primary btn-lg">Read Now</a>
                 </div>
 
             </div>
@@ -173,8 +174,8 @@
     	<!-- Contact Us -->
         <div class="contact">
         	<div class="container">
-				<h2 class="section-heading">Contact Me</h2>
-				<p><span class="glyphicon glyphicon-earphone"></span><br> @MrCodyASmith</p>
+				<h2 class="section-heading">Contact Me:</h2>
+				<p><span class="glyphicons glyphicons-comments"></span><br> Twitter: <br> @MrCodyASmith <br> __</p>
 				<p><span class="glyphicon glyphicon-envelope"></span><br> cody@mrcodysmith.com</p>
         	</div>
         </div>
