Added HTML content and Hack3r Mode

--- a/index.html
+++ b/index.html
@@ -51,17 +51,6 @@
                         <a href="#">Home</a>
                     </li>
                     <li>
-                        <a href="#">Products</a>
-                    </li>
-					<li class="dropdown">
-						<a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Services <span class="caret"></span></a>
-						<ul class="dropdown-menu" aria-labelledby="about-us">
-							<li><a href="#">Engage</a></li>
-							<li><a href="#">Pontificate</a></li>
-							<li><a href="#">Synergize</a></li>
-						</ul>
-					</li>
-                    <li>
                         <a href="http://mrcodysmith.com/contact">Contact</a>
                     </li>
                 </ul>
@@ -77,7 +66,7 @@
                 <h1>Mr. Cody Smith</h1>
                 <p>Acting as the linchpin between management and our end users
                 to provide proactive security solutions since 2014.</p>
-                <a href="http://mrcodysmith.com/contact" class="btn btn-primary btn-lg">Engage Now</a>
+                <a href="http://mrcodysmith.com/hack3rm0d3" class="btn btn-primary btn-lg">Engage Hacker Mode</a>
             </div>
         </div>
     </header>
@@ -88,9 +77,9 @@
             <div class="row">
                 <div class="col-lg-8 col-lg-offset-2">
                 	<span class="glyphicon glyphicon-lock" style="font-size: 60px"></span>
-                    <h2 class="section-heading">Proactive Security is a way of Business</h2>
-                    <p class="text-light">Information Security can be reactive, but I believe that the best
-                    security is proactive security.</p>
+                    <h2 class="section-heading">Proactive Security is a way of life</h2>
+                    <p class="text-light">Information Security can be reactive, and some times it has to be.
+                      However, I believe that the best security is proactive security.</p>
                 </div>
             </div>
         </div>
@@ -118,9 +107,9 @@
         <div class="container">
             <div class="row">
                 <div class="col-sm-6">
-                	<h2 class="section-header">Superior Quality</h2>
-                	<p class="lead text-light">Holisticly predominate extensible testing procedures for reliable supply chains. Dynamically innovate resource-leveling customer service for state of the art customer service.</p>
-                	<a href="#" class="btn btn-default btn-lg">Test It</a>
+                	<h2 class="section-header">Defense in Depth</h2>
+                	<p class="lead text-light">I have a video series where I break down common security errors end-users make, and how to fix them.</p>
+                	<a href="#" class="btn btn-default btn-lg">Watch Now </a>
                 </div>
                 <div class="col-sm-6">
                     <img class="img-responsive img-circle center-block" src="images/iphone.jpg" alt="">
@@ -130,41 +119,12 @@
         </div>
     </section>
 
-    <!-- Promos -->
-	<div class="container-fluid">
-        <div class="row promo">
-        	<a href="#">
-				<div class="col-md-4 promo-item item-1">
-					<h3>
-						Unleash
-					</h3>
-				</div>
-            </a>
-            <a href="#">
-				<div class="col-md-4 promo-item item-2">
-					<h3>
-						Synergize
-					</h3>
-				</div>
-            </a>
-
-			<a href="#">
-				<div class="col-md-4 promo-item item-3">
-					<h3>
-						Procrastinate
-					</h3>
-				</div>
-            </a>
-        </div>
-    </div><!-- /.container-fluid -->
-
 	<!-- Content 3 -->
      <section class="content content-3">
         <div class="container">
-			<h2 class="section-header"><span class="glyphicon glyphicon-pushpin text-primary"></span><br> Sanity Check</h2>
-			<p class="lead text-muted">Holisticly predominate extensible testing procedures for reliable supply chains. Dynamically innovate resource-leveling customer service for state of the art customer service.</p>
-                    <a href="#" class="btn btn-primary btn-lg">Check Now</a>
-            </div>
+			<h2 class="section-header"><span class="glyphicon glyphicon-pushpin text-primary"></span><br> Get in touch</h2>
+			<p class="lead text-muted">Want to learn more about myself? Contact me!</p>
+        <a href="#" class="btn btn-default btn-lg">Contact Cody </a>
         </div>
     </section>
 
@@ -174,9 +134,8 @@
     	<!-- Contact Us -->
         <div class="contact">
         	<div class="container">
-				<h2 class="section-heading">Contact Me:</h2>
-				<p><span class="glyphicons glyphicons-comments"></span><br> Twitter: <br> @MrCodyASmith <br> __</p>
-				<p><span class="glyphicon glyphicon-envelope"></span><br> cody@mrcodysmith.com</p>
+				<p> Did you try "Hacker Mode"?<br> @MrCodyASmith</p>
+
         	</div>
         </div>
 
