--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
                 </button>
                 <a class="navbar-brand" href="#">
                 	<span class="glyphicon glyphicon-fire"></span>
-                	LOGO
+                	Mr. Cody Smith
                 </a>
             </div>
             <!-- Navbar links -->
